# emacs-ghostty

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  compile_commands.json  elisp.c  elisp.h  ghostty-vt-module.c  ghostty-vt-package.el  ghostty-vt.el
.github/workflows/: test.yml
test/: test-ghostty.el
